# optiback

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.cursor/rules/: local-only-config.mdc
.github/workflows/: ci.yml
examples/: delta_hedge_walkthrough.py
src/optiback/: __init__.py
src/optiback.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/optiback/backtest/: __init__.py  costs.py  delta_hedge.py  engine.py  mispricing.py
src/optiback/cli/: helpers.py  optiback.py
src/optiback/data/: __init__.py  loader.py
src/optiback/pricing/: __init__.py  array.py  binomial.py  black_scholes.py  greeks.py  implied_vol.py  monte_carlo.py
tests/: test_backtest.py  test_binomial.py  test_black_scholes.py  test_cli_backtest.py  test_cli_binomial.py  test_cli_greeks.py  test_cli_implied_vol.py  test_cli_monte_carlo.py  test_cli_price.py  test_data.py  test_examples.py  test_greeks.py  test_implied_vol.py  test_monte_carlo.py  test_smoke.py
