[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optiback"
version = "0.1.0"
description = "Options pricing and backtesting engine (Black–Scholes, Binomial, MC) with Greeks and realistic costs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Christian Armaly" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "numba>=0.59",
  "matplotlib>=3.8",
  "typer[all]>=0.12",
  "rich>=13.7",
  "pyarrow>=16.0",
  "yfinance>=0.2.40"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "hypothesis>=6.104",
  "black>=24.4",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C90"]  # pycodestyle, pyflakes, isort, pyupgrade, bugbear, complexity
ignore = ["E501"]                       # we let Black handle wrapping
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["optiback"]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
pretty = true
packages = ["optiback"]
exclude = "(^\\.venv/|^venv/|^build/|^dist/|^data/|/site-packages/)"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[project.scripts]
optiback = "optiback.cli.optiback:main"
